--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title }}</a></h1>
         <nav class="main-nav">
           <a href="{{ site.baseurl }}/">Home</a>
+          <a href="{{ site.baseurl }}/comprehensive">Overview</a>
           <a href="{{ site.baseurl }}/transformer-theory">Theory</a>
           <a href="{{ site.baseurl }}/transformer-applications">Applications</a>
           <a href="{{ site.baseurl }}/setup-instructions">Setup</a>
