[Update] Apply styling and add details in Theory page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
           <a href="{{ site.baseurl }}/transformer-applications">Applications</a>
           <a href="{{ site.baseurl }}/setup-instructions">Setup</a>
           <a href="{{ site.baseurl }}/hands-on-practice">Practice</a>
+          <a href="{{ site.baseurl }}/styling-demo">Demo</a>
         </nav>
       </header>
       <main>
