--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -9,7 +9,7 @@
 <script>hljs.highlightAll();</script>
 
 <!-- Custom favicon -->
-<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/images/favicon.png">
+<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/images/favicon.svg">
 
 <!-- Open Graph / Social Media Meta Tags -->
 <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
