--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
               <a href="{{ site.baseurl }}/transformer-applications">Applications</a>
               <a href="{{ site.baseurl }}/setup-instructions">Setup</a>
               <a href="{{ site.baseurl }}/hands-on-practice">Practice</a>
-              <a href="{{ site.baseurl }}/styling-demo">Demo</a>
+              <a href="{{ site.baseurl }}/usecase-activity-recognition">Use-case: Activity Recognition</a>
             </nav>
           </div>
         </div>
